--- a/templates/register.html
+++ b/templates/register.html
@@ -12,18 +12,16 @@
   <body>
     <div class="container">
       <header>
-        <h1>ユーザー登録</h1>
+        <h1>英単語学習アプリ</h1>
       </header>
 
-      {% with messages = get_flashed_messages() %}
-        {% if messages %}
-          <div class="flash-messages">
-            {% for message in messages %}
-              <div class="flash-message">{{ message }}</div>
-            {% endfor %}
-          </div>
-        {% endif %}
-      {% endwith %}
+      {% with messages = get_flashed_messages() %} {% if messages %}
+      <div class="flash-messages">
+        {% for message in messages %}
+        <div class="flash-message">{{ message }}</div>
+        {% endfor %}
+      </div>
+      {% endif %} {% endwith %}
 
       <form method="post" class="auth-form">
         <div class="form-group">
@@ -38,7 +36,10 @@
         </div>
       </form>
     </div>
-    <audio id="trans-sound" src="{{ url_for('static', filename='sounds/page_trans.mp3') }}"></audio>
+    <audio
+      id="trans-sound"
+      src="{{ url_for('static', filename='sounds/page_trans.mp3') }}"
+    ></audio>
     <script src="{{ url_for('static', filename='script.js') }}"></script>
   </body>
 </html>
