--- a/templates/wrong_words.html
+++ b/templates/wrong_words.html
@@ -8,8 +8,25 @@
       rel="stylesheet"
       href="{{ url_for('static', filename='style.css') }}"
     />
+    <link
+      rel="stylesheet"
+      href="{{ url_for('static', filename='hamburger.css') }}"
+    />
   </head>
   <body>
+    <div class="hamburger-menu">
+      <button class="hamburger-btn">
+        <span></span>
+        <span></span>
+        <span></span>
+      </button>
+      <div class="hamburger-content">
+        <a class="play-sound00" href="/decks">デッキ一覧</a>
+        <a class="play-sound00" href="/study_logs">学習ログ</a>
+        <a class="play-sound00" href="/logout">ログアウト</a>
+      </div>
+    </div>
+
     <div class="container">
       <h1>間違えた単語リスト</h1>
 
@@ -25,14 +42,18 @@
       </div>
 
       <div class="buttons">
-        <button id="reset-btn" class="play-sound00 reset-btn">トップへ</button>
-
-        <a href="/generate_sentence" class="button">例文生成</a> 
-
+        <a href="{{ url_for('decks') }}" class="play-sound00 reset-btn"
+          >トップへ</a
+        >
+        <a href="/generate_sentence" class="button">例文生成</a>
       </div>
     </div>
 
     <script src="{{ url_for('static', filename='script.js') }}"></script>
-    <audio id="trans-sound" src="{{ url_for('static', filename='sounds/page_trans.mp3') }}"></audio>
+    <script src="{{ url_for('static', filename='hamburger.js') }}"></script>
+    <audio
+      id="trans-sound"
+      src="{{ url_for('static', filename='sounds/page_trans.mp3') }}"
+    ></audio>
   </body>
 </html>
