--- a/templates/API.html
+++ b/templates/API.html
@@ -12,6 +12,10 @@
       rel="stylesheet"
       href="{{ url_for('static', filename='hamburger.css') }}"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+    />
     <style>
       :root {
         --text_main: #e6f0ff;
@@ -154,9 +158,15 @@
         <span></span>
       </button>
       <div class="hamburger-content">
-        <a class="play-sound00" href="/decks">デッキ一覧</a>
-        <a class="play-sound00" href="/study_logs">学習ログ</a>
-        <a class="play-sound00" href="/logout">ログアウト</a>
+        <a class="play-sound00" href="/decks"
+          ><i class="fas fa-layer-group"></i> デッキ一覧</a
+        >
+        <a class="play-sound00" href="/study_logs"
+          ><i class="fas fa-history"></i> 学習ログ</a
+        >
+        <a class="play-sound00" href="/logout"
+          ><i class="fas fa-sign-out-alt"></i> ログアウト</a
+        >
       </div>
     </div>
 
@@ -178,9 +188,11 @@
       <div class="sentence-box">{{ translation }}</div>
     </div>
     <div class="button-container">
-      <a class="play-sound00 button" href="/generate_sentence">保存(未実装)</a>
+      <a class="play-sound00 button" href="/generate_sentence"
+        ><i class="fas fa-save"></i> 保存(未実装)</a
+      >
       <a href="/decks" id="reset-btn" class="play-sound00 reset-btn"
-        >トップへ</a
+        ><i class="fas fa-home"></i> トップへ</a
       >
     </div>
     <audio
