--- a/templates/deck_add.html
+++ b/templates/deck_add.html
@@ -29,6 +29,10 @@
         <input type="text" id="name" name="name" required />
       </div>
       <div>
+        <label for="category">カテゴリ:</label>
+        <input type="text" id="category" name="category" placeholder="例: TOEIC, ビジネス英語, 旅行" />
+      </div>
+      <div>
         <label for="description">説明:</label>
         <textarea id="description" name="description"></textarea>
       </div>
