--- a/templates/deck_add.html
+++ b/templates/deck_add.html
@@ -12,14 +12,24 @@
       rel="stylesheet"
       href="{{ url_for('static', filename='deck.css') }}"
     />
+    <link
+      rel="stylesheet"
+      href="{{ url_for('static', filename='hamburger.css') }}"
+    />
   </head>
   <body>
-    <nav class="navbar">
-      <div class="nav_container">
-        <a class="play-sound00 nav_button" href="/logout">ログアウト</a>
-        <a class="play-sound00 nav_button" href="/decks">デッキ一覧へ</a>
+    <div class="hamburger-menu">
+      <button class="hamburger-btn">
+        <span></span>
+        <span></span>
+        <span></span>
+      </button>
+      <div class="hamburger-content">
+        <a class="play-sound00" href="/decks">デッキ一覧</a>
+        <a class="play-sound00" href="/study_logs">学習ログ</a>
+        <a class="play-sound00" href="/logout">ログアウト</a>
       </div>
-    </nav>
+    </div>
 
     <h1 class="start-title">デッキ作成</h1>
     <!-- デッキ作成フォーム -->
@@ -40,6 +50,7 @@
     </form>
 
     <script src="{{ url_for('static', filename='script.js') }}"></script>
+    <script src="{{ url_for('static', filename='hamburger.js') }}"></script>
     <audio
       id="trans-sound"
       src="{{ url_for('static', filename='sounds/page_trans.mp3') }}"
