--- a/templates/decks.html
+++ b/templates/decks.html
@@ -18,6 +18,9 @@
       <div class="nav_container">
         <a class="play-sound00 nav_button" href="/logout">ログアウト</a>
       </div>
+      <div class="nav_container">
+        <a class="play-sound00 nav_button" href="{{ url_for('saved_sentences') }}">文章リスト</a>
+      </div>
     </nav>
 
     <h1 class="start-title">デッキ一覧</h1>
