--- a/templates/API.html
+++ b/templates/API.html
@@ -77,8 +77,13 @@
       <span class="label">例文（日本語訳）：</span>
       <div class="sentence-box">{{ translation }}</div>
     </div>
-    <div>
-      <a class="play-sound00 button" href="/generate_sentence">保存(未実装)</a>
+    <div class="buttons">
+      <form action="{{ url_for('save_sentence') }}" method="POST">
+        <input type="hidden" name="sentence" value="{{ sentence }}">
+        <input type="hidden" name="translation" value="{{ translation }}">
+        <button type="submit" class="play-sound00 button">保存</button>
+      </form>
+
       <button id="reset-btn" class="play-sound00 reset-btn">トップへ</button>
     </div>
   <audio id="trans-sound" src="{{ url_for('static', filename='sounds/page_trans.mp3') }}"></audio>
