--- a/templates/API.html
+++ b/templates/API.html
@@ -196,6 +196,7 @@
         <a class="play-sound00" href="/decks"
           ><i class="fas fa-layer-group"></i> デッキ一覧</a
         >
+        <a class="play-sound00" href="/saved_sentences">文章リスト</a>
         <a class="play-sound00" href="/study_logs"
           ><i class="fas fa-history"></i> 学習ログ</a
         >
