--- a/templates/deck_detail.html
+++ b/templates/deck_detail.html
@@ -26,6 +26,7 @@
       </button>
       <div class="hamburger-content">
         <a class="play-sound00" href="/decks">デッキ一覧</a>
+        <a class="play-sound00" href="/saved_sentences">文章リスト</a>
         <a class="play-sound00" href="/study_logs">学習ログ</a>
         <a class="play-sound00" href="/logout">ログアウト</a>
       </div>
