--- a/templates/saved_sentences.html
+++ b/templates/saved_sentences.html
@@ -12,8 +12,25 @@
         rel="stylesheet"
         href="{{ url_for('static', filename='saved_sentences.css') }}"
         />
+        <link
+        rel="stylesheet"
+        href="{{ url_for('static', filename='hamburger.css') }}"
+        />
     </head>
     <body>
+        <div class="hamburger-menu">
+            <button class="hamburger-btn">
+                <span></span>
+                <span></span>
+                <span></span>
+            </button>
+            <div class="hamburger-content">
+                <a class="play-sound00" href="/decks">デッキ一覧</a>
+                <a class="play-sound00" href="/saved_sentences">文章リスト</a>
+                <a class="play-sound00" href="/study_logs">学習ログ</a>
+                <a class="play-sound00" href="/logout">ログアウト</a>
+            </div>
+        </div>
         <h1>保存された例文</h1>
         <div class="saved-sentences-container">
             <ul>
@@ -33,6 +50,11 @@
             <button id="reset-btn" class="play-sound00 reset-btn">トップへ</button>
         </div>
         <script src="{{ url_for('static', filename='script.js') }}"></script>
+        <script src="{{ url_for('static', filename='hamburger.js') }}"></script>
+        <audio
+            id="trans-sound"
+            src="{{ url_for('static', filename='sounds/page_trans.mp3') }}"
+        ></audio>
         <script>
             // トップへボタンのカスタム処理
             document
