--- a/templates/wrong_words.html
+++ b/templates/wrong_words.html
@@ -22,6 +22,7 @@
       </button>
       <div class="hamburger-content">
         <a class="play-sound00" href="/decks">デッキ一覧</a>
+        <a class="play-sound00" href="/saved_sentences">文章リスト</a>
         <a class="play-sound00" href="/study_logs">学習ログ</a>
         <a class="play-sound00" href="/logout">ログアウト</a>
       </div>
@@ -46,6 +47,7 @@
           >トップへ</a
         >
         <a href="/generate_sentence" class="button">例文生成</a>
+        <a href="{{ url_for('saved_sentences') }}" class="play-sound00 button">文章リスト</a>
       </div>
     </div>
 
