--- a/templates/wrong_words.html
+++ b/templates/wrong_words.html
@@ -38,7 +38,7 @@
           <div class="japanese">{{ translation }}</div>
         </div>
         {% endfor %} {% else %}
-        <p>間違えた単語はありません。</p>
+        <p>おめでとう！全問正解です！</p>
         {% endif %}
       </div>
 
