--- a/static/saved_sentences.css
+++ b/static/saved_sentences.css
@@ -27,7 +27,7 @@
 .sentence-item strong {
   display: block;
   font-size: 1.5rem;
-  color: #00ffff;
+  /* color: #00ffff; */
   margin-bottom: 10px;
 }
 
@@ -66,7 +66,7 @@
   text-align: left;
 }
 
-.sentence-item strong {
+/* .sentence-item strong {
   display: block;
   font-size: 1.5rem;
   color: #00ffff;
@@ -85,4 +85,4 @@
   font-size: 0.9rem;
   color: #888;
   text-align: right;
-}
+} */
