--- a/templates/saved_sentences.html
+++ b/templates/saved_sentences.html
@@ -36,8 +36,8 @@
             <ul>
                 {% for s in sentences %}
                 <li class="sentence-item">
-                    <strong>{{ s.sentence }}</strong>
-                    <em>{{ s.translation }}</em>
+                    <strong>{{ s.sentence | safe }}</strong>
+                    <em>{{ s.translation | safe }}</em>
                     <small>{{ s.created_at.strftime('%Y-%m-%d %H:%M') }}</small>
                 </li>
                 {% else %}
