--- a/templates/saved_sentences.html
+++ b/templates/saved_sentences.html
@@ -36,8 +36,8 @@
             <ul>
                 {% for s in sentences %}
                 <li class="sentence-item">
-                    <strong>{{ s.sentence }}</strong>
-                    <em>{{ s.translation }}</em>
+                    <strong>{{ s.sentence | safe }}</strong>
+                    <em>{{ s.translation | safe }}</em>
                     <small>{{ s.created_at.strftime('%Y-%m-%d %H:%M') }}</small>
                 </li>
                 {% else %}
@@ -55,22 +55,5 @@
             id="trans-sound"
             src="{{ url_for('static', filename='sounds/page_trans.mp3') }}"
         ></audio>
-        <script>
-            // トップへボタンのカスタム処理
-            document
-              .getElementById("reset-btn")
-              .addEventListener("click", function (e) {
-                e.preventDefault();
-                const sound = document.getElementById("trans-sound");
-                if (sound) {
-                  sound.currentTime = 0;
-                  sound.play();
-                }
-      
-                setTimeout(function () {
-                  window.location.href = "/decks";
-                }, 300);
-              });
-          </script>
     </body>
 </html>
