--- a/templates/study_logs.html
+++ b/templates/study_logs.html
@@ -29,7 +29,7 @@
         <span></span>
       </button>
       <div class="hamburger-content">
-        <a class="play-sound00" href="/decks">デッキ一覧</a>
+        <a class="play-sound00" href="/decks">単語帳一覧</a>
         <a class="play-sound00" href="/saved_sentences">文章リスト</a>
         <a class="play-sound00" href="/study_logs">学習ログ</a>
         <a class="play-sound00" href="/logout">ログアウト</a>
