スマホのホバーを変更

--- a/static/saved_sentences.css
+++ b/static/saved_sentences.css
@@ -58,7 +58,7 @@ ul {
   font-size: 2.0rem;
   color: #ccc;
   text-align: center;
-  margin-top: 2rem;
+  /* margin-top: 10rem; */
 }
 
 /* .sentence-item {
