--- a/templates/saved_sentences.html
+++ b/templates/saved_sentences.html
@@ -44,7 +44,7 @@
                     <small>{{ s.created_at.strftime('%Y-%m-%d %H:%M') }}</small>
                 </li>
                 {% else %}
-                <li class="no-sentence">保存された例文はありません。</li>
+                <li class="no-sentence">保存された例文はありません</li>
                 {% endfor %}
             </ul>
         </div>
